# ai-cmd

./: .coverage  .env.example  .gitignore  00-OPTIMIZATION-INDEX.md  AGENTS.md  BUILD_TEST_REPORT.md  IMPLEMENTATION_PLAN.md  OPTIMIZATION_BRANCH_SETUP.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_README.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_TASKS.md  QUICKSTART_FIRST_TASK.md  README.md  README_zh.md  USAGE.md  USAGE_zh.md  ai.py  cache_manager.py  config_manager.py  database_manager.py  main.py  pyproject.toml
.github/: copilot-commit-message-instructions.md  copilot-instructions.md
.github/agent/: config.yml  install-manifest.json
.github/instructions/: config-system.instructions.md  copilot-task-record.instructions.md  error-handling.instructions.md  llm-provider-development.instructions.md  python-coding-style.instructions.md  security-rules.instructions.md  testing-guidelines.instructions.md
.task-manager-data/ai-cmd/: tasks.json
.task-manager-data/dev_log/: dev_log_v0.2.0.md
.worktree/: extension_proposals.md  optimization-suggestions.md  optimization_proposals.md  task-roadmap.md  task-summary-20260130-150712-phase1-testing.md  task-summary-20260130-170652-phase2-architecture-refactor.md  task-summary-20260131-045200-phase3-performance-optimization.md  task-summary-create-instructions-202602281000.md  task-summary-phase1-infrastructure-202601291354.md  task-summary-update-instructions-202601301030.md  task_breakdown.md
src/: setting_template.json
src/aicmd/: __init__.py  ai.py  api_client.py  (+20 more)
tests/: __init__.py  conftest.py  test_cache_manager.py  test_clipboard_manager.py  test_confidence_calculator.py  test_config_manager.py  test_database_manager.py  test_exceptions.py  test_hash_utils.py  test_integration.py  test_interactive_manager.py  test_keyring_manager.py  test_llm_providers.py  test_logger.py  test_prompts.py  test_query_matcher.py  test_safety_checker.py
worktree/: README.md  extension_proposals.md  optimization_proposals.md  task_breakdown.md
(+15 files in other folders)
