[project]
name = "ai-cmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "python-dotenv",
    "pyperclip",
]
[project.scripts]
aicmd = "ai:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
]
