[project]
name = "ai-cmd"
version = "0.2.2"
description = "A smart command-line tool that converts natural language prompts to shell commands"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Mikko", email = "allen125423412@163.com"}
]
license = "MIT"
keywords = ["ai", "command-line", "shell", "automation", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "pyperclip>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Mikko-ww/ai-cmd"
Repository = "https://github.com/Mikko-ww/ai-cmd"
Issues = "https://github.com/Mikko-ww/ai-cmd/issues"
Documentation = "https://github.com/Mikko-ww/ai-cmd#readme"

[project.scripts]
aicmd = "aicmd:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"aicmd" = ["setting_template.json"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
]
